--- a/nlwValoriza/package.json
+++ b/nlwValoriza/package.json
@@ -5,10 +5,11 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev src/server.ts -e /src/.env",
-    "typeorm":"ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/uuid": "^8.3.4",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
@@ -17,6 +18,7 @@
     "express": "^4.17.2",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
-    "typeorm": "^0.2.41"
+    "typeorm": "^0.2.41",
+    "uuid": "^8.3.2"
   }
 }
