--- a/nlwValoriza/ormconfig.json
+++ b/nlwValoriza/ormconfig.json
@@ -7,5 +7,6 @@
     "cli":{
         "migrationsDir": "src/database/migrations",
         "entitiesDir":"src/entities"
-    }
+    },
+    "synchronize": true
  }
